--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url : https://vigilant-meitner-6e3bbb.netlify.com/
-permalink: /:categories/:title/
+permalink: /:categories/:title
 
 collections:
   authors:
