--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
   link: /about
 - name: Blog
   link: /blog
-- name: Staff
-  link: /staff
+- name: Team
+  link: /team
 - name: Works
   link: /works
 - name: Clients
