--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url : https://vigilant-meitner-6e3bbb.netlify.com/
+url : https://vigilant-meitner-6e3bbb.netlify.com
 permalink: /:categories/:title
 
 collections:
