Add new clients and assets

--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -1,18 +1,87 @@
+- client: chef-meyhane
+  work: brand-identity
+  src: /assets/images/chef-meyhane/brand-identity/1.jpg
+- client: chef-meyhane
+  work: brand-identity
+  src: /assets/images/chef-meyhane/brand-identity/2.jpg
+- client: era-kozmetik
+  work: digital
+  src: /assets/images/era-kozmetik/digital/1.jpg
+- client: maxx-royal
+  work: campaigns
+  src: /assets/images/maxx-royal/campaigns/1.jpg
+- client: maxx-royal
+  work: campaigns
+  src: /assets/images/maxx-royal/campaigns/2.jpg
+- client: maxx-royal
+  work: campaigns
+  src: /assets/images/maxx-royal/campaigns/3.jpg
+- client: maxx-royal
+  work: campaigns
+  src: /assets/images/maxx-royal/campaigns/4.jpg
+- client: maxx-royal
+  work: campaigns
+  src: /assets/images/maxx-royal/campaigns/5.jpg
+- client: maxx-royal
+  work: campaigns
+  src: /assets/images/maxx-royal/campaigns/6.jpg
+- client: maxx-royal
+  work: campaigns
+  src: /assets/images/maxx-royal/campaigns/7.jpg
 - client: maxx-royal
   work: print
-  src: https://images.pexels.com/photos/70862/pexels-photo-70862.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
-- client: voyage
-  work: content
-  src: https://images.pexels.com/photos/70862/pexels-photo-70862.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
-- client: maxx-royal
-  work: content
-  src: https://images.pexels.com/photos/70862/pexels-photo-70862.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
-- client: voyage
-  work: print
-  src: https://images.pexels.com/photos/70862/pexels-photo-70862.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
-- client: voyage
-  work: print
-  src: https://images.pexels.com/photos/70862/pexels-photo-70862.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
+  src: /assets/images/maxx-royal/print/1.jpg
 - client: maxx-royal
   work: print
-  src: https://images.pexels.com/photos/70862/pexels-photo-70862.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
+  src: /assets/images/maxx-royal/print/2.jpg
+- client: maxx-royal
+  work: print
+  src: /assets/images/maxx-royal/print/3.jpg
+- client: raphael
+  work: brand-identity
+  src: /assets/images/raphael/brand-identity/1.jpg
+- client: raphael
+  work: brand-identity
+  src: /assets/images/raphael/brand-identity/2.jpg
+- client: raphael
+  work: brand-identity
+  src: /assets/images/raphael/brand-identity/3.jpg
+- client: voyage
+  work: campaigns
+  src: /assets/images/voyage/campaigns/1.jpg
+- client: voyage
+  work: campaigns
+  src: /assets/images/voyage/campaigns/2.jpg
+- client: voyage
+  work: campaigns
+  src: /assets/images/voyage/campaigns/3.jpg
+- client: voyage
+  work: campaigns
+  src: /assets/images/voyage/campaigns/4.jpg
+- client: voyage
+  work: campaigns
+  src: /assets/images/voyage/campaigns/5.jpg
+- client: voyage
+  work: campaigns
+  src: /assets/images/voyage/campaigns/6.jpg
+- client: voyage
+  work: print
+  src: /assets/images/voyage/print/1.jpg
+- client: yapi-yapi
+  work: brand-identity
+  src: /assets/images/yapi-yapi/brand-identity/1.png
+- client: yapi-yapi
+  work: brand-identity
+  src: /assets/images/yapi-yapi/brand-identity/2.jpg
+- client: yapi-yapi
+  work: brand-identity
+  src: /assets/images/yapi-yapi/brand-identity/3.jpg
+- client: yapi-yapi
+  work: brand-identity
+  src: /assets/images/yapi-yapi/brand-identity/4.jpg
+- client: yapi-yapi
+  work: brand-identity
+  src: /assets/images/yapi-yapi/brand-identity/5.jpg
+- client: yapi-yapi
+  work: brand-identity
+  src: /assets/images/yapi-yapi/brand-identity/6.jpg
