--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Works
   link: /works
-- name: Clients
-  link: /clients
+- name: Brands
+  link: /brands
 - name: Contact
   link: /contact
