Change yapi images

--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -84,7 +84,7 @@
   src: /assets/images/voyage/print/2.jpg
 - client: yapi-yapi
   work: brand-identity
-  src: /assets/images/yapi-yapi/brand-identity/1.png
+  src: /assets/images/yapi-yapi/brand-identity/1.jpg
 - client: yapi-yapi
   work: brand-identity
   src: /assets/images/yapi-yapi/brand-identity/2.jpg
