--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -103,3 +103,39 @@
 - client: lotus-nisantasi
   work: digital
   src: /assets/images/lotus-nisantasi/digital/1.jpg
+- client: chef-grup
+  work: digital
+  src: /assets/images/chef-grup/digital/1.jpg
+- client: chef-grup
+  work: brand-identity
+  src: /assets/images/chef-grup/brand-identity/1.jpg
+- client: elevatione
+  work: digital
+  src: /assets/images/elevatione/digital/1.jpg
+- client: elevatione
+  work: digital
+  src: /assets/images/elevatione/digital/2.jpg
+- client: elevatione
+  work: product-design
+  src: /assets/images/elevatione/product-design/1.jpg
+- client: elevatione
+  work: social-media
+  src: /assets/images/elevatione/social-media/1.jpg
+- client: elevatione
+  work: social-media
+  src: /assets/images/elevatione/social-media/2.jpg
+- client: fiolas
+  work: product-design
+  src: /assets/images/fiolas/product-design/1.jpg
+- client: fiolas
+  work: product-design
+  src: /assets/images/fiolas/product-design/2.jpg
+- client: fiolas
+  work: product-design
+  src: /assets/images/fiolas/product-design/3.png
+- client: fiolas
+  work: product-design
+  src: /assets/images/fiolas/product-design/4.png
+- client: fiolas
+  work: product-design
+  src: /assets/images/fiolas/product-design/5.png
