--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -54,6 +54,9 @@
   work: digital
   src: /assets/images/maxx-royal/digital/1.jpg
 - client: maxx-royal
+  work: digital
+  src: /assets/images/maxx-royal/digital/2.jpg
+- client: maxx-royal
   work: social-media
   src: /assets/images/maxx-royal/social-media/1.jpg
 # Raphael
@@ -94,6 +97,9 @@
 - client: voyage
   work: social-media
   src: /assets/images/voyage/social-media/1.jpg
+- client: voyage
+  work: digital
+  src: /assets/images/voyage/digital/1.jpg
 # Yapi Yapi
 - client: yapi-yapi
   work: brand-identity
@@ -116,6 +122,9 @@
 - client: yapi-yapi
   work: digital
   src: /assets/images/yapi-yapi/digital/1.jpg
+- client: yapi-yapi
+  work: print
+  src: /assets/images/yapi-yapi/print/1.jpg
 # Lotus Nisantasi
 - client: lotus-nisantasi
   work: digital
