Change work type temp

--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -33,7 +33,7 @@
   work: campaigns
   src: /assets/images/maxx-royal/campaigns/4.jpg
 - client: maxx-royal
-  work: campaigns
+  work: communication-strategy
   src: /assets/images/maxx-royal/campaigns/5.jpg
 - client: maxx-royal
   work: campaigns
@@ -83,7 +83,7 @@
   work: campaigns
   src: /assets/images/voyage/campaigns/4.jpg
 - client: voyage
-  work: campaigns
+  work: communication-strategy
   src: /assets/images/voyage/campaigns/5.jpg
 - client: voyage
   work: campaigns
